--- a/src/Jobseeker/Job.module.scss
+++ b/src/Jobseeker/Job.module.scss
@@ -42,12 +42,19 @@
     }
 
     h1 {
-      font-size: 30px;
+      font-size: 30px !important;
       font-weight: bold;
       color: #ffde5d;
       justify-content: flex-start;
 
-      @media (max-width: 768px) {
+      @media (max-width: 600px){
+        font-size: 20px !important;
+      }
+      @media (max-width: 960px){
+        font-size: 24px !important;
+      }
+
+      @media (max-width: 960px) {
         justify-content: center;
       }
     }
@@ -55,6 +62,13 @@
       font-size: 30px;
       font-weight: bold;
       color: white;
+
+      @media (max-width: 600px){
+        font-size: 20px;
+      }
+      @media (max-width: 960px){
+        font-size: 24px !important;
+      }
     }
 
     a {
