--- a/src/Jobseeker/Offers.module.scss
+++ b/src/Jobseeker/Offers.module.scss
@@ -118,6 +118,13 @@
   font-size: 20px;
   font-family: "DM Sans", sans-serif;
   margin-bottom: 1.5rem;
+  padding-top: 10px;
+
+  @media (max-width: 680px) {
+  
+    font-size: 16px;
+  }
+
 }
 
 .dynamicText {
@@ -125,7 +132,13 @@
   font-weight: bold;
   transition: opacity 0.5s ease-in-out;
   font-size: 38px;
-  font-family: "DM Sans", sans-serif;
+  font-family: "DM Sans";
+
+  
+  @media (max-width: 680px) {
+    font-size: 24px;
+  }
+
 }
 
 .offerList {
@@ -163,9 +176,9 @@
   @media (max-width: 998px) {
     justify-content: flex-start;
     width: 100%;
-    padding: 0 10px;
+    padding: 0px;
     display: grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 40px 1fr;
     justify-items: start;
 
     gap: 0;
@@ -175,11 +188,11 @@
     max-width: 250px;
   }
 
-  @media (max-width: 600px) {
-    font-size: 0.9rem;
+  @media (max-width: 700px) {
+    font-size: 12px;
   }
-  @media (max-width: 500px) {
-    font-size: 0.7rem;
+  @media (max-width: 600px) {
+    font-size: 10px;
   }
 }
 
@@ -195,6 +208,8 @@
   width: 450px;
   max-width: 400px;
   z-index: 2;
+
+  
 
   @media (min-width: 464px) {
     right: 10%;
@@ -221,6 +236,11 @@
   gap: 1rem;
   margin-top: 1rem;
   width: 100%;
+  justify-content: center;
+
+  @media (min-width: 997px) {
+    justify-content: flex-start; 
+  }
 }
 
 .callButton,
